Fix cargo warning about exclude syntax
```
warning: Pattern matching for Cargo's include/exclude fields is changing and file `platform_tools/nacl/tests/index.html` WILL be excluded in a future Cargo version.
See https://github.com/rust-lang/cargo/issues/4268 for more info
```

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,15 +10,15 @@ homepage = "https://skia.org/"
 links = "skia"
 build = "build.rs"
 exclude = [
-    "experimental/*",
-    "expectations/*",
-    "gm/tests/*",
-    "gm/rebaseline_server/*",
-    "platform_tools/android/bin/*",
-    "platform_tools/android/examples/*",
-    "platform_tools/android/tests/*",
-    "tools/*",
-    "tests/*",
+    "/experimental/*",
+    "/expectations/*",
+    "/gm/tests/*",
+    "/gm/rebaseline_server/*",
+    "/platform_tools/android/bin/*",
+    "/platform_tools/android/examples/*",
+    "/platform_tools/android/tests/*",
+    "/tools/*",
+    "/tests/*",
 ]
 
 [lib]
