--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ libc = "0.2"
 expat-sys = "2.1.5"
 
 [target.'cfg(target_os = "windows")'.dependencies]
-servo-glutin = "0.14"
+servo-glutin = { version = "0.14", git = "https://github.com/faern/glutin", branch = "upgrade-core-foundation" }
 
 [target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
 servo-fontconfig-sys = "4.0.0"
@@ -49,4 +49,4 @@ servo-egl = "0.2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cgl = "0.2"
-io-surface = "0.9"
+io-surface = { version = "0.9", git = "https://github.com/faern/io-surface-rs", branch = "upgrade-core-foundation" }
