Avoid cross-compilation issues with clang on NDK <13.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -733,8 +733,7 @@ elseif($ENV{TARGET} MATCHES "(arm|armv7)-.*")
     add_definitions(-mfloat-abi=softfp)
   endif()
   if(NOT "$ENV{TARGET}" STREQUAL "$ENV{HOST}")
-    # FIXME: Assumes armv7 for cross compile
-    add_definitions(-march=armv7-a -mthumb)
+    add_definitions(--target=$ENV{TARGET})
   endif()
 elseif($ENV{TARGET} MATCHES "aarch64-.*")
   set(SKIA_SRC ${SKIA_SRC} ${SKIA_OPTS_AARCH64_SRC})
